Updates documentation for expanded API endpoints and tech stack
Clarifies available API endpoints, including retrieval and deletion of plans,
and provides a more detailed project overview with updated tech stack,
features, and instructions.

Improves onboarding and usage clarity for new contributors and users.